fix: Mitigate Sonarcloud code smells